@@ -1,5 +1,12 @@
 2007-04-09  Brian Cameron  <brian.cameron@sun.com>
 
+	* gui/gdmlanguages.c:  When the user changes language, GDM pops up
+	  a dialog asking if the user wants to restart GDM.  If the user
+	  picks "No", the new language should still be applied for when the
+	  session starts.  This patch fixes this.
+
+2007-04-09  Brian Cameron  <brian.cameron@sun.com>
+
 	* gui/gdmflexiserver.c: Mark error strings for translation.
 
 2007-04-09  Brian Cameron  <brian.cameron@sun.com>
